fix and document submiterator stuff

--- a/experiments/test/test.config
+++ b/experiments/test/test.config
@@ -3,7 +3,7 @@
 "liveHIT":"no",
 "title":"WhyBot: The Automated 3-year-old",
 "description":"explain some everyday events.",
-"nameofexperimentfiles":"whybot",
+"nameofexperimentfiles":"test",
 "experimentURL":"http://www.stanford.edu/~erindb/why/experiments/test/test.html",
 "keywords":"language research stanford fun cognitive science university explanations",
 "USonly?":"yes",
